# Math128A

./: CMakeLists.txt  README.md
Chapter 3/: Hermite_Interpolation  Hermite_Interpolation.cpp  Polynomial.cpp  temp.cpp
Chapter 4/: AdaptiveQuadrature  AdaptiveQuadrature.cpp  Romberg.cpp  simpsonDoubleIntegral  simpsonDoubleIntegral.cpp
Chapter 5/: adams  adams.cpp  rungekutta  rungekutta.cpp  rungekuttafehlberg  rungekuttafehlberg.cpp  rungekuttasystems  rungekuttasystems.cpp  trapezoidal_newton  trapezoidal_newton.cpp
Chapter 6/: complete_pivoting  complete_pivoting.cpp  exercise9  exercise9.cpp  gauss.cpp  mat_inv  mat_inv.cpp  matrix.cpp  modint.cpp  partial_pivoting  partial_pivoting.cpp  scaled_partial_pivoting  scaled_partial_pivoting.cpp  substitution  substitution.cpp  temp.cpp
